# noble-idl

./: .editorconfig  .gitignore  Cargo.toml  README.md
backends/js/: generate-wasm-module.js  package-lock.json  package.json
backends/js/src/: api-util.ts  api.ts  emit.ts  index.ts  main.ts  package_options.ts  regenerate-api.ts
backends/noble-idl/: compiler-api.nidl
backends/rust/: Cargo.toml
backends/rust/noble-idl-compiler-rust/: Cargo.toml
backends/rust/noble-idl-compiler-rust/src/: lib.rs
backends/rust/noble-idl-rust-plugin/: Cargo.toml
backends/rust/noble-idl-rust-plugin/src/: cargo_util.rs  emit.rs  lib.rs
backends/rust/src/: annotations.rs  cycle.rs  emit.rs  lib.rs
examples/js/: package-lock.json  package.json
examples/js/src/: example.nidl
examples/noble-idl/: example.nidl
examples/rust/: Cargo.toml
langs/: copy-idl.sh
langs/dotnet/: .gitignore  NobleIDL.sln  build-wasm.sh  regenerate-api.sh
langs/dotnet/NobleIDL.Backend/: Api.Gen.cs  Api.cs  CSharpBackend.cs  CSharpIDLCompilerOptions.cs  CSharpLanguageOptions.cs  CSharpNobleIDLCompiler.cs  NamespaceMapping.cs  NobleIDL.Backend.csproj  NobleIDLCompileErrorException.cs  NobleIDLCompiler.cs  Program.cs
langs/dotnet/NobleIDL.BuildUtil/: NobleIDL.BuildUtil.csproj  Program.cs
langs/dotnet/NobleIDL.GenerateTask/: NobleIDL.GenerateTask.csproj  NobleIDLGenerate.cs
langs/dotnet/NobleIDL.Runtime/: Gen.cs  NamespaceMapping.cs  NobleIDL.Runtime.csproj  NobleIDLPackageMappingAttribute.cs  NobleIDLSourceFileAttribute.cs  Types.cs
langs/dotnet/NobleIDL.Tests/: DefaultValueTests.cs  Externs.cs  NobleIDL.Tests.csproj  Program.cs
langs/java/: .gitignore  .sdkmanrc  settings.gradle.kts
langs/java/backend/: build.gradle.kts
langs/java/example/: build.gradle.kts
langs/java/gradle/: libs.versions.toml
langs/java/gradle-plugin/: build.gradle.kts
langs/java/runtime/: build.gradle.kts
langs/java/test/: build.gradle.kts
langs/java/util/: build.gradle.kts
langs/js/backend/: generate-wasm-module.js  package-lock.json  package.json
langs/js/example/: package-lock.json  package.json  tsconfig.json
langs/js/runtime/: argon-lang-noble-idl-core-0.1.0.tgz  package-lock.json  (+2 more)
langs/rust/backend/: Cargo.toml
langs/rust/backend/src/: annotations.rs  cargo_util.rs  cycle.rs  emit.rs  lib.rs
langs/rust/backend/src/emit/: ident.rs  method_emitter.rs  mod.rs  trait_emitter.rs  type_emitter.rs  type_mapper.rs
langs/rust/backend/src/emit/interface/: erased_trait.rs  interface_trait.rs  mapper.rs  mod.rs  public_trait.rs
langs/rust/test/: Cargo.toml
langs/rust/test/src/: lib.rs
langs/scala/: .sdkmanrc  build.sbt
nobidl-compiler/: Cargo.toml
nobidl-compiler/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs  model.rs
nobidl-compiler/src/emit/: java.rs
nobidl-compiler/src/emit/scala/: common.rs  zio.rs
nobidl-compiler/tests/: compile_output.rs
nobidl-compiler/tests/compile_output/java/src/main/java/dev/argon/nobidl/test/: MyExtern2.java
nobidl-compiler/tests/compile_output/nobidl/: test.nidl
nobidl-compiler/tests/compile_output/scala/zio/: MyExtern.scala  build.sbt
noble-idl-api/: Cargo.toml
noble-idl-api/src/: lib.rs  noble_idl_api.rs
noble-idl-compiler/: Cargo.toml
noble-idl-compiler-rust/: Cargo.toml
noble-idl-compiler-rust/src/: lib.rs  main.rs
noble-idl-compiler/src/: ast.rs  grammar.lalrpop  lib.rs  main.rs  model.rs  parser.rs
noble-idl-compiler/src/emit/: mod.rs
noble-idl-compiler/src/emit/scala/: mod.rs  scalajs.rs
noble-idl-compiler/src/model/: mod.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  tag_scanner.rs
noble-idl-compiler/tests/: compile_output.rs
noble-idl-compiler/tests/compile_output/java/: build.sbt
noble-idl-compiler/tests/compile_output/java/src/main/java/dev/argon/nobidl/test/: MyExtern.java
noble-idl-compiler/tests/compile_output/noble-idl/: test.nidl
noble-idl-compiler/tests/compile_output/rust/src/: lib.rs
noble-idl-compiler/tests/compile_output/scala/sjs/: MyExtern.scala  build.sbt
noble-idl-rust-plugin/: Cargo.toml
noble-idl-rust-plugin/src/: emit.rs  lib.rs  main.rs
runtime/: copy-idl.sh
runtime/js/: package-lock.json  package.json  tsconfig.json
runtime/nobidl/: nobidl-core.nidl
runtime/noble-idl/: nobidl-core.nidl  nobleidl-core.nidl
runtime/rust/: Cargo.toml
runtime/scala_zio/: build.sbt
runtime/scalajs/: build.sbt
(+293 files in other folders)
