[package]
name = "noble-idl-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "rlib", "cdylib" ]

[dev-dependencies]
tempfile = "3.10.1"
toml = "0.8.15"
walkdir = "2.5.0"

[dependencies]
derive_more = "0.99.16"
io-adapters = "0.3.0"
itertools = "0.12.1"
esexpr = "0.1.15"
esexpr-binary = "0.1.15"
esexpr-text = "0.1.15"
noble-idl-api = { path = "../noble-idl-api" }
noble-idl-runtime = { path = "../langs/rust/runtime" }
clap = { version = "4.5.9", features = ["derive"] }
clap_derive = "4.5.8"
nom = "7.1.3"


