[package]
name = "noble-idl-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "rlib", "cdylib" ]

[dev-dependencies]
tempfile = "3.16.0"
toml = "0.8.19"
walkdir = "2.5.0"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
io-adapters = "0.4.0"
itertools = "0.14.0"
esexpr = "0.1.19"
esexpr-binary = "0.1.19"
esexpr-text = "0.1.19"
noble-idl-api = { path = "../noble-idl-api" }
noble-idl-runtime = { path = "../langs/rust/runtime" }
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = "4.5.28"
nom = "8.0.0"
num-bigint = "0.4.6"


