[package]
name = "noble-idl-compiler-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.18"
esexpr = "0.1.13"
esexpr-binary = "0.1.13"
itertools = "0.13.0"
noble-idl-api = { path = "../../noble-idl-api" }
noble-idl-compiler = { path = "../../noble-idl-compiler" }
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
syn = "2.0.70"
cargo_metadata = "0.18.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
