[package]
name = "noble-idl-example"
version = "0.1.0"
edition = "2021"

[dependencies]
esexpr = "0.1.12"
noble-idl-runtime = { path = "../../runtime/rust" }

[build-dependencies]
noble-idl-compiler-rust = { path = "../../backends/rust/noble-idl-compiler-rust" }


[package.metadata.noble-idl.package_mapping]
"nobleidl.example" = ""
