[package]
name = "noble-idl-compiler-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
esexpr = "0.1.20"
esexpr-binary = "0.1.20"
itertools = "0.14.0"
noble-idl-api = { path = "../../../noble-idl-api" }
noble-idl-compiler = { path = "../../../noble-idl-compiler" }
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = "2.0.98"
cargo_metadata = "0.19.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
